[gd_scene load_steps=5 format=3 uid="uid://dd6aod3xbuc58"]

[ext_resource type="Script" path="res://UI/menu.gd" id="1_12wop"]
[ext_resource type="Texture2D" uid="uid://k0hgv4tgine2" path="res://assets/forest-background.png" id="2_jvr4d"]
[ext_resource type="Texture2D" uid="uid://c6ea52ds4e1w0" path="res://assets/Menu/generatedtext.png" id="3_jp7jy"]
[ext_resource type="Texture2D" uid="uid://dtq0w0woe0cm2" path="res://assets/Menu/generatedtext (1).png" id="4_t0rmw"]

[node name="Menu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_12wop")

[node name="Forest-background" type="Sprite2D" parent="."]
position = Vector2(364, 243)
scale = Vector2(1.12286, 1.18227)
texture = ExtResource("2_jvr4d")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 0
offset_left = 311.0
offset_top = 298.0
offset_right = 385.0
offset_bottom = 399.0

[node name="StartButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Start"

[node name="ControlsButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Controls"

[node name="QuitButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Quit"

[node name="Node" type="Node2D" parent="."]
position = Vector2(359, 183)
metadata/_edit_group_ = true

[node name="Title" type="Sprite2D" parent="Node"]
position = Vector2(37, 4.5)
texture = ExtResource("3_jp7jy")

[node name="Subtitle" type="Sprite2D" parent="Node"]
position = Vector2(-6, 57.5)
scale = Vector2(0.722222, 0.722222)
texture = ExtResource("4_t0rmw")

[connection signal="pressed" from="VBoxContainer/StartButton" to="." method="_on_start_button_pressed"]
[connection signal="pressed" from="VBoxContainer/ControlsButton" to="." method="_on_controls_button_pressed"]
[connection signal="pressed" from="VBoxContainer/QuitButton" to="." method="_on_quit_button_pressed"]
